fix color picker overlapping with tab border in lesson view on firefox added border on homework view

--- a/src/main/resources/public/css/additional.css
+++ b/src/main/resources/public/css/additional.css
@@ -126,6 +126,12 @@ Override marging for homeworks display
     margin-top: 120px;
 }
 
+section .homework-detail {
+    margin-top: -1px;
+    border: 1px solid;
+    padding: 6px;"
+}
+
 /*
 .schedule .days div.schedule-items div.schedule-item {
     z-index: 0;
